# Framework-Example-Project

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  readme.md  sdkconfig
main/: CMakeLists.txt  main.c
main/drivers/gpio/: drv_gpio.c  drv_gpio.h
main/drivers/nvs/: drv_nvs.c  drv_nvs.h
main/drivers/wifi/: drv_wifi.c  drv_wifi.h
